--- a/buttons/index.html
+++ b/buttons/index.html
@@ -42,24 +42,89 @@
     </div>
     <!-- SUBMIT  -->
     <div>
-      <h1>Submit = btn-submit</h1>
+      <h1>Color for confirm/submit = btn-ok</h1>
       <div>
-        <button class="btn-d btn-br1 btn-submit">
+        <button class="btn-d btn-br1 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br2 btn-submit">
+        <button class="btn-d btn-br2 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-submit">
+        <button class="btn-d btn-br3 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
     </div>
     <!-- EDIT  -->
-    <!-- DELETE  -->
+    <!-- DELETE / CANCEL  -->
+    <div>
+      <h1>Color for cancel or delete = btn-no</h1>
+      <div>
+        <button class="btn-d btn-br1 btn-no">
+          <a href="">delete </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br2 btn-no">
+          <a href="">delete </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-no">
+          <a href="">delete </a>
+        </button>
+      </div>
+    </div>
+    <!-- SHADOW HOVER EFFECT  -->
+    <div>
+      <h1>shadow with hover effect = shadeff1</h1>
+      <div>
+        <button class="btn-d shadeff1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 shadeff1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-ok shadeff1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-no shadeff1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+    </div>
+    <div>
+      <h1>shadow with hover effect = shadeff2</h1>
+      <div>
+        <button class="btn-d shadeff2">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 shadeff2">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-ok shadeff2">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-no shadeff2">
+          <a href="">shadow </a>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
