--- a/buttons/index.html
+++ b/buttons/index.html
@@ -81,47 +81,70 @@
     </div>
     <!-- SHADOW HOVER EFFECT  -->
     <div>
-      <h1>shadow with hover effect = shadeff1</h1>
+      <h1>btn with shadow = shadow1</h1>
       <div>
-        <button class="btn-d shadeff1">
+        <button class="btn-d shadow1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 shadeff1">
+        <button class="btn-d btn-br3 shadow1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok shadeff1">
+        <button class="btn-d btn-br3 btn-ok shadow1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no shadeff1">
+        <button class="btn-d btn-br3 btn-no shadow1">
           <a href="">shadow </a>
         </button>
       </div>
     </div>
     <div>
-      <h1>shadow with hover effect = shadeff2</h1>
+      <h1>shadow when hover = shadhov1</h1>
       <div>
-        <button class="btn-d shadeff2">
+        <button class="btn-d shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 shadeff2">
+        <button class="btn-d btn-br3 shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok shadeff2">
+        <button class="btn-d btn-br3 btn-ok shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no shadeff2">
+        <button class="btn-d btn-br3 btn-no shadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+    </div>
+    <div>
+      <h1>shadow + shadow hover</h1>
+      <div>
+        <button class="btn-d shadow1 shadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 shadow1 shadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-ok shadow1 shadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-no shadow1 shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
