--- a/buttons/index.html
+++ b/buttons/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
+    <link rel="stylesheet" href="./assets/styles/fontawesome-all.min.css" />
     <title>Document</title>
   </head>
 
@@ -59,7 +60,6 @@
         </button>
       </div>
     </div>
-    <!-- EDIT  -->
     <!-- DELETE / CANCEL  -->
     <div>
       <h1>Color for cancel or delete = btn-no</h1>
@@ -103,6 +103,7 @@
         </button>
       </div>
     </div>
+
     <div>
       <h1>shadow when hover = shadhov1</h1>
       <div>
@@ -126,6 +127,7 @@
         </button>
       </div>
     </div>
+
     <div>
       <h1>shadow + shadow hover</h1>
       <div>
@@ -149,5 +151,37 @@
         </button>
       </div>
     </div>
+
+    <div>
+      <h1>inset shadows when hover = insetshadhov1</h1>
+      <div>
+        <button class="btn-d insetshadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 insetshadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-ok insetshadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-no insetshadhov1">
+          <a href="">shadow </a>
+        </button>
+      </div>
+    </div>
+
+    <div>
+      <button class="btn-d btn-br3 btn-no insetshadhov1">
+        <!-- <a href="">shadow </a> -->
+        <a href=""><i class="fas fa-yin-yang"></i></a>
+      </button>
+    </div>
+    <!-- S -->
   </body>
 </html>
