--- a/buttons/index.html
+++ b/buttons/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <link rel="stylesheet" href="./assets/styles/fontawesome-all.min.css" />
-    <title>Document</title>
+    <title>Btn | NewGame+</title>
+    <link rel="shortcut icon" href="./../newgame+.png" />
   </head>
 
   <body>
@@ -41,7 +42,7 @@
         </button>
       </div>
     </div>
-    <!-- SUBMIT  -->
+    <!-- color  -->
     <div>
       <h1>Color for confirm/submit = btn-ok</h1>
       <div>
@@ -60,7 +61,7 @@
         </button>
       </div>
     </div>
-    <!-- DELETE / CANCEL  -->
+
     <div>
       <h1>Color for cancel or delete = btn-no</h1>
       <div>
@@ -79,6 +80,26 @@
         </button>
       </div>
     </div>
+
+    <div>
+      <h1>Color blue = btn-blue</h1>
+      <div>
+        <button class="btn-d btn-br1 btn-blue">
+          <a href="">blue </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br2 btn-blue">
+          <a href="">blue </a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-blue">
+          <a href="">blue </a>
+        </button>
+      </div>
+    </div>
+
     <!-- SHADOW HOVER EFFECT  -->
     <div>
       <h1>btn with shadow = shadow1</h1>
@@ -176,12 +197,40 @@
       </div>
     </div>
 
+    <!-- edit btn icon -->
     <div>
-      <button class="btn-d btn-br3 btn-no insetshadhov1">
-        <!-- <a href="">shadow </a> -->
-        <a href=""><i class="fas fa-yin-yang"></i></a>
-      </button>
+      <h1>btn with edit icon</h1>
+      <div>
+        <button class="btn-d btn-br1 btn-blue shadhov1">
+          <!-- <a href="">shadow </a> -->
+          <a href=""><i class="fas fa-edit"></i></a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d btn-br3 btn-blue insetshadhov1">
+          <!-- <a href="">shadow </a> -->
+          <a href=""><i class="fas fa-edit"></i></a>
+        </button>
+      </div>
     </div>
-    <!-- S -->
+    <!-- Mobile btn icon & shape -->
+    <div>
+      <h1>Mobile btn icon & shape = mob-btn</h1>
+      <div>
+        <button class="btn-d mob-btn btn-br1 shadhov1">
+          <a href=""><i class="fas fa-bars"></i></a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d mob-btn btn-br2 shadhov1">
+          <a href=""><i class="fas fa-bars"></i></a>
+        </button>
+      </div>
+      <div>
+        <button class="btn-d mob-btn btn-br3 shadhov1">
+          <a href=""><i class="fas fa-bars"></i></a>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
