--- a/comps/btn.html
+++ b/comps/btn.html
@@ -25,19 +25,19 @@
     </div>
     <!-- BORDER RADIUS  -->
     <div>
-      <h1>Border radius = btn-br1/2/3</h1>
+      <h1>Border radius = br1/2/3</h1>
       <div>
-        <button class="btn-d btn-br1">
+        <button class="btn-d br1">
           <a href="">br1 </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br2">
+        <button class="btn-d br2">
           <a href="">br2 </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3">
+        <button class="btn-d br3">
           <a href="">br3 </a>
         </button>
       </div>
@@ -46,17 +46,17 @@
     <div>
       <h1>Color for confirm/submit = btn-ok</h1>
       <div>
-        <button class="btn-d btn-br1 btn-ok">
+        <button class="btn-d br1 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br2 btn-ok">
+        <button class="btn-d br2 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok">
+        <button class="btn-d br3 btn-ok">
           <a href="">submit</a>
         </button>
       </div>
@@ -65,17 +65,17 @@
     <div>
       <h1>Color for cancel or delete = btn-no</h1>
       <div>
-        <button class="btn-d btn-br1 btn-no">
+        <button class="btn-d br1 btn-no">
           <a href="">delete </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br2 btn-no">
+        <button class="btn-d br2 btn-no">
           <a href="">delete </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no">
+        <button class="btn-d br3 btn-no">
           <a href="">delete </a>
         </button>
       </div>
@@ -84,17 +84,17 @@
     <div>
       <h1>Color blue = btn-blue</h1>
       <div>
-        <button class="btn-d btn-br1 btn-blue">
+        <button class="btn-d br1 btn-blue">
           <a href="">blue </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br2 btn-blue">
+        <button class="btn-d br2 btn-blue">
           <a href="">blue </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-blue">
+        <button class="btn-d br3 btn-blue">
           <a href="">blue </a>
         </button>
       </div>
@@ -109,17 +109,17 @@
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 shadow1">
+        <button class="btn-d br3 shadow1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok shadow1">
+        <button class="btn-d br3 btn-ok shadow1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no shadow1">
+        <button class="btn-d br3 btn-no shadow1">
           <a href="">shadow </a>
         </button>
       </div>
@@ -157,17 +157,17 @@
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 shadow1 shadhov1">
+        <button class="btn-d br3 shadow1 shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok shadow1 shadhov1">
+        <button class="btn-d br3 btn-ok shadow1 shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no shadow1 shadhov1">
+        <button class="btn-d br3 btn-no shadow1 shadhov1">
           <a href="">shadow </a>
         </button>
       </div>
@@ -181,17 +181,17 @@
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 insetshadhov1">
+        <button class="btn-d br3 insetshadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-ok insetshadhov1">
+        <button class="btn-d br3 btn-ok insetshadhov1">
           <a href="">shadow </a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-no insetshadhov1">
+        <button class="btn-d br3 btn-no insetshadhov1">
           <a href="">shadow </a>
         </button>
       </div>
@@ -201,13 +201,13 @@
     <div>
       <h1>btn with edit icon</h1>
       <div>
-        <button class="btn-d btn-br1 btn-blue shadhov1">
+        <button class="btn-d br1 btn-blue shadhov1">
           <!-- <a href="">shadow </a> -->
           <a href=""><i class="fas fa-edit"></i></a>
         </button>
       </div>
       <div>
-        <button class="btn-d btn-br3 btn-blue insetshadhov1">
+        <button class="btn-d br3 btn-blue insetshadhov1">
           <!-- <a href="">shadow </a> -->
           <a href=""><i class="fas fa-edit"></i></a>
         </button>
@@ -217,17 +217,17 @@
     <div>
       <h1>Mobile btn icon & shape = mob-btn</h1>
       <div>
-        <button class="btn-d mob-btn btn-br1 shadhov1">
+        <button class="btn-d mob-btn br1 shadhov1">
           <a href=""><i class="fas fa-bars"></i></a>
         </button>
       </div>
       <div>
-        <button class="btn-d mob-btn btn-br2 shadhov1">
+        <button class="btn-d mob-btn br2 shadhov1">
           <a href=""><i class="fas fa-bars"></i></a>
         </button>
       </div>
       <div>
-        <button class="btn-d mob-btn btn-br3 shadhov1">
+        <button class="btn-d mob-btn br3 shadhov1">
           <a href=""><i class="fas fa-bars"></i></a>
         </button>
       </div>
