--- a/comps/social.html
+++ b/comps/social.html
@@ -10,53 +10,60 @@
   </head>
 
   <body>
-    <div class="socials insetshadow1">
-      <ul>
-        <li>
-          <a href="">
-            <i class="fab fa-twitter-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-facebook-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-github-square"></i>
-          </a>
-        </li>
-      </ul>
+    <div class="tempbox">
+      <h1>socials with insetshdow</h1>
+      <div class="socials insetshadow1 br3 tempbox">
+        <ul>
+          <li>
+            <a href="">
+              <i class="fab fa-twitter-square"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-github-square"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="socials socials-shadhov1">
-      <ul>
-        <li>
-          <a href="" class="">
-            <i class="fab fa-twitter-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-facebook-square"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fab fa-github-square"></i>
-          </a>
-        </li>
-      </ul>
+    <div>
+      <h1>socials with socials-shadhov1</h1>
+
+      <div class="socials socials-shadhov1 tempbox">
+        <ul>
+          <li>
+            <a href="" class="">
+              <i class="fab fa-twitter-square"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fab fa-github-square"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
