--- a/comps/social.html
+++ b/comps/social.html
@@ -10,10 +10,10 @@
   </head>
 
   <body>
-    <div class="tempbox">
+    <div class="tempbox box100">
       <h1>socials with insetshdow</h1>
-      <div class="socials insetshadow1 br3 tempbox">
-        <ul>
+      <div class="socials insetshadow1 br4 tempbox box100">
+        <ul class="dspflex">
           <li>
             <a href="">
               <i class="fab fa-twitter-square"></i>
@@ -41,7 +41,7 @@
       <h1>socials with socials-shadhov1</h1>
 
       <div class="socials socials-shadhov1 tempbox">
-        <ul>
+        <ul class="dspflex">
           <li>
             <a href="" class="">
               <i class="fab fa-twitter-square"></i>
